# scuderie-ia

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  init_db.py  pyproject.toml  pytest.ini  setup_env_clean.sh  test_setup.py  verify_env.sh
.github/workflows/: ci.yml
data/: sample_knowledge.json
scripts/: generate_report.py  import_json.py  test_rate_limit.py
src/: config.py  database.py  main.py  models.py  schemas.py
src/api/: chat.py  endpoints.py
src/core/: auth.py  logging_config.py  rate_limit.py
src/ml/services/: chunker.py  embedding.py  llm.py  query_rewriter.py
tests/: conftest.py  test_api.py  test_chunker.py
